--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
                  <li id="number">1,000,000</li>
             </div>
             <div class="list">
-                <li>TYPE</li>
-                <li id="slash"> / </li>
+
                 <li>CHARACTER </li>
                 <li id="slash"> / </li>
                 <li>DETAILS</li>
@@ -125,18 +124,18 @@
                 <li id="ghost">
                         <a class="total" href="#blank1"><img class="ggg" src="img/ghots_red.png" width="70px;"></a>
                 </li>
-                <li id="type">
-                    -API
-                </li>
+
                 <li id="character">
-                        &nbsp;"GEOLOCATION"
+                        <a class="bubble" data-tooltip-text="It refers to the geographical (latitudinal and longitudinal) location of an Internet-connected device. It is the location of whatever electronic medium is being used to access the Internet.
+                        ">"GEOLOCATION"</a> 
+                        <img src="img/point2.png" width="30px">
                 </li>
 
                 <li id="nickname">
-                        &nbsp;&nbsp;"VERY DETAILED DATA"
+                    &nbsp;&nbsp;"VERY DETAILED DATA"
                 </li>
                 <li id="score">
-                        &nbsp;450,000   
+                        &nbsp;&nbsp;&nbsp;450,000   
                 </li>
             </div>
 
@@ -144,17 +143,18 @@
                 <li id="ghost">
                         <a class="total" href="#blank1"> <img class="ggg" src="img/ghost_pink.png" width="70px;" > </a>
                 </li>
-                <li id="type">
-                        -API
-                    </li>
+
+
                     <li id="character">
-                        &nbsp;"GET_ACCOUNTS"
+                    <a class="bubble" data-tooltip-text="It is permission to read information about any account.
+                        ">"GET_ACCOUNTS"</a>
+                        <img src="img/point2.png" width="30px">
                     </li>
                 <li id="nickname">
                     "EMAIL&OTHER ACCOUNTS"
                 </li>
                 <li id="score">
-                    300,000        
+                    &nbsp;&nbsp;300,000        
                 </li>  
             </div> 
 
@@ -162,17 +162,17 @@
                 <li id="ghost">
                         <a class="total" href="#blank1"><img class="ggg" src="img/ghost_mint.png" width="70px;"></a>
                 </li>
-                <li id="type">
-                        -API
-                    </li>
+
                     <li id="character">
-                            &nbsp;"READ_PHONE_STATE"
+                        <a class="bubble" data-tooltip-text="It is permission to read only access to phone state, including the phone number of the device, current cellular network information, the status of any ongoing calls, and a list of any phone accounts registered on the device.
+                        ">"READ_PHONE_STATE"</a>
+                        <img src="img/point2.png" width="30px">
                     </li>
                 <li id="nickname">
                         &nbsp;&nbsp;&nbsp;"NUMBER"
                 </li>
                 <li id="score">
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;200,000                 
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;200,000                 
                 </li> 
             </div>
 
@@ -180,17 +180,17 @@
                 <li id="ghost">
                         <a class="total" href="#blank1"><img class="ggg" src="img/ghost_yellow.png" width="70px;"></a>
                 </li>
-                <li id="type">
-                        -WIFI
-                    </li>
+
                     <li id="character">
-                        "GEOLOCATION"
+                        <a class="bubble" data-tooltip-text="It refers to the geographical (latitudinal and longitudinal) location of an Internet-connected device. It is the location of whatever electronic medium is being used to access the Internet.
+                        ">"GEOLOCATION"</a> 
+                        <img src="img/point2.png" width="30px">
                     </li>
                  <li id="nickname">
                         &nbsp;&nbsp;&nbsp;&nbsp; "STREET-LEVEL"
                 </li>
                 <li id="score">
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;50,000            
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;50,000            
                 </li> 
             </div>
             <div class="clickus">
